# ssak

./: .gitignore  CMakeLists.txt  README.md  sak_tools.txt
_src/: CMakeLists.txt  io.cpp  subprocess.hpp
_src/scratch/: scratch.cpp
etc/: bash_completion
scripts/: gen_project_templates.py
src/: archive.cpp  archive.hpp  args.hpp  config.cpp  config.hpp  editor.hpp  exception.hpp  exp_templates.cpp  exp_templates.hpp  graph.hpp  io.cpp  platform.hpp  scratch.cpp  scratch_unix.cpp  sqlite.cpp  sqlite.hpp  ssak.cpp  ssak.hpp  subprocess.hpp  util.hpp  verbs.hpp
src/pet/: skills.hpp
src/scratch/:  scratch.hpp  archive.hpp  scratch.hpp  scratch_unix.cpp
src/task/: task.hpp
src/templates/linux_driver/: Makefile  kmod_example.c
src/templates/opengl_glfw/: glfw_main.c
src/templates/pulseaudio/: CMakeLists.txt  pulse_example.c
src/templates/win32/: win32_test.c
src/templates/x11/: CMakeLists.txt  x11_example.c
src/tools/: CMakeLists.txt  ssak.cpp  ssak_scratch.hpp  ssak_task.hpp
src/topics/: topics.hpp
src/util/: tmpfiles.hpp
test/: CMakeLists.txt  _test.db  archive_extract_test.cpp  archive_itr_test.cpp  archive_test.cpp  scratch_test.cpp  sqlite_test.cpp  test.db  test_archive.cpp  test_args.cpp  test_config.cpp  test_main.cpp  test_main.hpp  test_sqlite.cpp  test_util.cpp
test/tools/: test_scratch.cpp
test/util/: test_tmpfiles.cpp
